# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  25 Dec 2005; Mike Frysinger <vapier@gentoo.org>:

    Clean up and display the ${TMPFILE2}.err error file in modules-update
    where appropriate #116745 by Daniele Gaffuri.

  21 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add new variable RC_DOWN_INTERFACE and documentation so that interfaces
    are kept up for Wake On LAN support, #113880.

* baselayout-1.12.0_pre12 (20 Dec 2005)

  20 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Ensure that tty has keyboard and stty reports icanon before enabling
    interactive rc, #112161.

  15 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    When setting ad-hoc or master modes, set the mode before anything else,
    #115664 thanks to Oldrich Jedlicka.

  14 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add great big warning in documentation advising people not to use the
    IPv6 examples if they don't have IPv6 enabled in their kernel, #115396.

  09 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Remove nasty undocumented backgrounding as we now support
    ifplugd, netplug and wpa_supplicant-0.4.x which do much better jobs.

  08 Dec 2005; Mike Frysinger <vapier@gentoo.org>:

    Use getent instead of trying to read /etc/groups directly in localmount 
    #114833 by Justin Sanchez.

    Make modules-update a little more friendly by adding --help, --verbose,
    and --debug runtime options.

    Remove rtc clock sleep hack for udev and replace with a modprobe rtc.

  06 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    ppp documentation updated, #114551.

  05 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Fix dhcp options, #114519.

  29 Nov 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add po/Makefile, based mostly on work done by Rach Holmes <Rach.Holmes@GMX.net>
    and James Rowe <Jay@jnrowe.uklinux.net> since Mike changed most rc-scripts to
    support it.
