@@ -1,13 +1,16 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
-# Start logging console output since we have all /dev stuff setup
-bootlog start
-
 # Set the console loglevel to 1 for a cleaner boot
 # the logger should anyhow dump the ring-0 buffer at start to the
 # logs, and that with dmesg can be used to check for problems
 /bin/dmesg -n 1
+
+# Start logging console output since we have all /dev stuff setup
+bootlog start
+
+# Start RAID/LVM/EVMS/DM volumes for /usr, /var, etc.
+start_volumes
 
 # We set the forced softlevel from the kernel command line
 # It needs to be run right after proc is mounted for the
