@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
+  27 Dec 2005; Mike Frysinger <vapier@gentoo.org>:
+
+    Startup volume related stuff (lvm/raid/etc...) in rc instead of
+    init.d/checkfs (lvm/raid/etc...) #50711.
+
   25 Dec 2005; Mike Frysinger <vapier@gentoo.org>:
 
     Clean up and display the ${TMPFILE2}.err error file in modules-update
